--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -3,18 +3,11 @@ name = "alex-v1"
 
 [[project.requirements]]
 contract_id = "ST287GF5M9WEJ6BXEN7NPN1WGA95YWXWBE0ZRK6X.Wrapped-USD"
-
-[[project.requirements]]
-contract_id = "SP2TZK01NKDC89J6TA56SA47SDF7RTHYEQ79AAB9A.Wrapped-USD"
-
-[project.cache_location]
-path = "./.cache/.requirements"
+# contract_id = "SP2TZK01NKDC89J6TA56SA47SDF7RTHYEQ79AAB9A.Wrapped-USD"
 
 [repl]
 costs_version = 2
 
-# [repl.analysis]
-# passes = ["check_checker"]
 
 [contracts.age000-governance-token]
 path = "contracts_modules/alex_dao/extensions/age000-governance-token.clar"
