--- a/.github/workflows/ci-clarinet.yaml
+++ b/.github/workflows/ci-clarinet.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd clarity && ./scripts/clarinet_manager.sh install
       - name: "Check contract"
-        uses: docker://hirosystems/clarinet:0.32.0
+        uses: docker://hirosystems/clarinet:latest
         with:
           entrypoint: "bash"
           args: -c "cd clarity && clarinet check"
@@ -38,7 +38,7 @@ jobs:
         run: |
           echo "ci_env=$(bash <(curl -s https://codecov.io/env))" >> $GITHUB_ENV
       - name: "Execute test suite"
-        uses: docker://hirosystems/clarinet:0.32.0
+        uses: docker://hirosystems/clarinet:latest
         with:
           entrypoint: "bash"
           #args: -c "cd clarity && clarinet test --coverage && curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov -t ${{ secrets.CODECOV_TOKEN }} -f coverage.lcov"
