feat: config-swap-pool

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -976,3 +976,9 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 [contracts.bridge-endpoint]
 path = "contracts/bridge/bridge-endpoint.clar"
 depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.config-swap-pool]
+path = "contracts/pool/config-swap-pool.clar"
+
+[contracts.token-config-swap-pool]
+path = "contracts/pool-token/token-config-swap-pool.clar"
