--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ node_modules
 /contract-records.json
 yarn-error.log
 tsconfig.tsbuildinfo
-contracts_modules
+/clarity/contracts_modules
 /clarity/.cache/deps/
 /clarity/.cache/gen/
