config swap pool (#643)
* test being updated

* rename config-swap-pool to amm-swap-pool

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -976,3 +976,9 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 [contracts.bridge-endpoint]
 path = "contracts/bridge/bridge-endpoint.clar"
 depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.amm-swap-pool]
+path = "contracts/pool/amm-swap-pool.clar"
+
+[contracts.token-amm-swap-pool]
+path = "contracts/pool-token/token-amm-swap-pool.clar"
