--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -141,7 +141,7 @@ depends_on = [
   "yield-token-pool",
   "fixed-weight-pool-v1-01",
   "token-wstx",
-  "token-wusda"  
+  "token-wusda"
 ]
 
 [contracts.key-usda-wbtc]
@@ -257,9 +257,9 @@ depends_on = [
   "trait-sip-010",
   "trait-semi-fungible",
   "alex-reserve-pool",
-  "alex-vault",  
+  "alex-vault",
   "fixed-weight-pool-v1-01",
-  "simple-weight-pool-alex"  
+  "simple-weight-pool-alex"
 ]
 
 [contracts.lbp-alex-usda-90-10]
@@ -473,7 +473,7 @@ path = "contracts/multisig/multisig-fwp-wstx-alex-50-50-v1-01.clar"
 depends_on = [
   "fwp-wstx-alex-50-50-v1-01",
   "fixed-weight-pool-v1-01",
-  "trait-multisig-vote"  
+  "trait-multisig-vote"
 ]
 
 [contracts.fwp-wstx-wbtc-50-50-v1-01]
@@ -485,7 +485,7 @@ path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50-v1-01.clar"
 depends_on = [
   "fwp-wstx-wbtc-50-50-v1-01",
   "fixed-weight-pool-v1-01",
-  "trait-multisig-vote"  
+  "trait-multisig-vote"
 ]
 
 [contracts.multisig-fwp-alex-wbtc-50-50]
@@ -493,7 +493,7 @@ path = "contracts/multisig/multisig-fwp-alex-wbtc-50-50.clar"
 depends_on = [
   "fwp-alex-wbtc-50-50",
   "fixed-weight-pool-alex",
-  "trait-multisig-vote"  
+  "trait-multisig-vote"
 ]
 
 [contracts.fwp-wstx-usda-50-50-v1-01]
@@ -505,7 +505,7 @@ path = "contracts/multisig/multisig-fwp-wstx-usda-50-50-v1-01.clar"
 depends_on = [
   "fwp-wstx-usda-50-50-v1-01",
   "fixed-weight-pool-v1-01",
-  "trait-multisig-vote"  
+  "trait-multisig-vote"
 ]
 
 [contracts.fwp-alex-usda]
@@ -613,7 +613,7 @@ depends_on = [
   "collateral-rebalancing-pool-v1",
   "yield-token-pool",
   "swap-helper",
-  "token-wusda"  
+  "token-wusda"
 ]
 
 [contracts.multisig-crp-wbtc-alex]
@@ -979,6 +979,8 @@ depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.amm-swap-pool]
 path = "contracts/pool/amm-swap-pool.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.token-amm-swap-pool]
 path = "contracts/pool-token/token-amm-swap-pool.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible"]
