feat: dual-farming-pool-v1-01

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -984,3 +984,11 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-amm-swap-pool"]
 [contracts.token-amm-swap-pool]
 path = "contracts/pool-token/token-amm-swap-pool.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible"]
+
+[contracts.dual-farming-pool-v1-01]
+path = "contracts/pool/dual-farming-pool-v1-01.clar"
+depends_on = ["dual-farm-xusd-usda-helper"]
+
+[contracts.dual-farm-xusd-usda-helper]
+path = "contracts/helpers/dual-farm-xusd-usda-helper.clar"
+depends_on = []
