--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -992,3 +992,11 @@ depends_on = ["dual-farm-xusd-usda-helper"]
 [contracts.dual-farm-xusd-usda-helper]
 path = "contracts/helpers/dual-farm-xusd-usda-helper.clar"
 depends_on = []
+
+[contracts.flash-loan-user-usda-to-xusd]
+path = "contracts/flash-loan-user-usda-to-xusd.clar"
+depends_on = ["amm-swap-pool", "swap-helper-v1-03"]
+
+[contracts.flash-loan-user-xusd-to-usda]
+path = "contracts/flash-loan-user-xusd-to-usda.clar"
+depends_on = ["amm-swap-pool", "swap-helper-v1-03"]
