--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -7,6 +7,9 @@ contract_id = "ST287GF5M9WEJ6BXEN7NPN1WGA95YWXWBE0ZRK6X.Wrapped-USD"
 [[project.requirements]]
 contract_id = "SP2TZK01NKDC89J6TA56SA47SDF7RTHYEQ79AAB9A.Wrapped-USD"
 
+[[project.requirements]]
+contract_id = "SP3NE50GEXFG9SZGTT51P40X2CKYSZ5CC4ZTZ7A2G.welshcorgicoin-token"
+
 [repl]
 costs_version = 2
 
