--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1003,3 +1003,7 @@ depends_on = ["amm-swap-pool", "swap-helper-v1-03"]
 [contracts.flash-loan-user-xusd-to-usda]
 path = "contracts/flash-loan-user-xusd-to-usda.clar"
 depends_on = ["amm-swap-pool", "swap-helper-v1-03"]
+
+[contracts.token-wcorgi]
+path = "contracts/wrapped-token/token-wcorgi.clar"
+depends_on = []
