feat: add susdt contract

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -980,9 +980,13 @@ depends_on = [ "token-wxusd-tokensoft" ]
 path = "contracts/pool-token/stable-wxusd-wusda.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
+[contracts.token-susdt]
+path = "contracts/bridged-tokens/token-susdt.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
+
 [contracts.bridge-endpoint]
 path = "contracts/bridge/bridge-endpoint.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
+depends_on = ["trait-ownable", "trait-sip-010", "token-susdt"]
 
 [contracts.amm-swap-pool]
 path = "contracts/pool/amm-swap-pool.clar"
