feat: amm swap pool v1-1 (#669)
* feat: swap-helper-v1-04

* feat: swap-helper-bridged

* feat: mint token

* feat: add susdt contract

* feat: update bridge

* feat: update with tokenfee

* upgrade to bridge v101

* fix: upgrade clarinet github action

* fix: add cache directory

* working

* working

* amm-swap-pool-v1-1 test added

* alex-vault => alex-vault-v1-1

* fix: add deps to new contracts

* deployed to mainnet

---------

Co-authored-by: Zitao Xiong <caoer115@gmail.com>
Co-authored-by: Kyle Fang <zhigang1992@gmail.com>

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,8 +1,11 @@
 [project]
 name = "alex-v1"
 
-[[project.requirements]]
-contract_id = "ST287GF5M9WEJ6BXEN7NPN1WGA95YWXWBE0ZRK6X.Wrapped-USD"
+[project.cache_location]
+path = ".cache"
+
+# [[project.requirements]]
+# contract_id = "ST287GF5M9WEJ6BXEN7NPN1WGA95YWXWBE0ZRK6X.Wrapped-USD"
 [[project.requirements]]
 contract_id = "SP2TZK01NKDC89J6TA56SA47SDF7RTHYEQ79AAB9A.Wrapped-USD"
 [[project.requirements]]
@@ -983,10 +986,6 @@ depends_on = [ "token-wxusd-tokensoft" ]
 path = "contracts/pool-token/stable-wxusd-wusda.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.bridge-endpoint]
-path = "contracts/bridge/bridge-endpoint.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
 [contracts.amm-swap-pool]
 path = "contracts/pool/amm-swap-pool.clar"
 depends_on = ["trait-ownable", "trait-sip-010", "token-amm-swap-pool"]
@@ -1018,4 +1017,34 @@ path = "contracts/flash-loan-user-wstx-to-diko.clar"
 
 [contracts.swap-helper-bridged]
 path = "contracts/helpers/swap-helper-bridged.clar"
+
+[contracts.alex-vault-v1-1]
+path = "contracts/alex-vault-v1-1.clar"
+depends_on = [
+  "trait-vault",
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "trait-ownable",
+  "trait-semi-fungible"
+]
+
+[contracts.amm-swap-pool-v1-1]
+path = "contracts/pool/amm-swap-pool-v1-1.clar"
+depends_on = ["trait-ownable", "trait-sip-010", "token-amm-swap-pool-v1-1"]
+
+[contracts.token-amm-swap-pool-v1-1]
+path = "contracts/pool-token/token-amm-swap-pool-v1-1.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible", "alex-vault-v1-1"]
+
+[contracts.token-susdt]
+path = "contracts/bridged-tokens/token-susdt.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.bridge-endpoint-v1-01]
+path = "contracts/bridge/bridge-endpoint-v1-01.clar"
+depends_on = ["trait-ownable", "trait-sip-010", "token-susdt"]
+clarity_version = 2
+epoch = "2.1"
+
+
 
