--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -18,6 +18,8 @@ contract_id = "SP2C2YFP12AJZB4MABJBAJ55XECVS7E4PMMZ89YZR.wrapped-stx-token"
 contract_id = "SP2C2YFP12AJZB4MABJBAJ55XECVS7E4PMMZ89YZR.arkadiko-token"
 [[project.requirements]]
 contract_id = "SP2C2YFP12AJZB4MABJBAJ55XECVS7E4PMMZ89YZR.arkadiko-alex-dual-yield-v1-1"
+[[project.requirements]]
+contract_id = "SP27BB1Y2DGSXZHS7G9YHKTSH6KQ6BD3QG0AN3CR9.vibes-token"
 
 [repl]
 costs_version = 2
@@ -1064,5 +1066,9 @@ path = "contracts/flash-loan-user-fixed-to-amm-stx-xbtc.clar"
 
 [contracts.auto-alex-buyback-helper]
 path = "contracts/helpers/auto-alex-buyback-helper.clar"
+
+[contracts.token-wvibes]
+path = "contracts/wrapped-token/token-wvibes.clar"
+depends_on = []
 
 
