--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1048,6 +1048,11 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-susdt"]
 clarity_version = 2
 epoch = "2.1"
 
+[contracts.bridge-registration-helper-v1-02]
+path = "contracts/bridge/bridge-registration-helper-v1-02.clar"
+clarity_version = 2
+epoch = "2.1"
+
 [contracts.auto-alex-v2]
 path = "contracts/auto-token/auto-alex-v2.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "alex-reserve-pool", "staking-helper" ]
