--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1050,6 +1050,7 @@ epoch = "2.1"
 
 [contracts.bridge-registration-helper-v1-02]
 path = "contracts/bridge/bridge-registration-helper-v1-02.clar"
+depends_on = ["bridge-endpoint-v1-01"]
 clarity_version = 2
 epoch = "2.1"
 
