--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -705,6 +705,10 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 path = "contracts/pool/dual-farming-pool.clar"
 depends_on = [ "trait-ownable", "trait-sip-010", "trait-transfer", "alex-reserve-pool" ]
 
+[contracts.dual-farming-pool-v1-01]
+path = "contracts/pool/dual-farming-pool-v1-01.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "alex-reserve-pool" ]
+
 [contracts.trait-transfer]
 path = "contracts/traits/trait-transfer.clar"
 depends_on = [ ]
