dual-farming-pool-v1-03

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -713,6 +713,10 @@ depends_on = [ "trait-ownable", "trait-sip-010", "alex-reserve-pool", "auto-alex
 path = "contracts/helpers/dual-farming-pool-v1-02.clar"
 depends_on = [ "trait-ownable", "trait-sip-010", "alex-reserve-pool", "auto-alex-v2" ]
 
+[contracts.dual-farming-pool-v1-03]
+path = "contracts/helpers/dual-farming-pool-v1-03.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "alex-reserve-pool", "auto-alex-v2" ]
+
 [contracts.trait-transfer]
 path = "contracts/traits/trait-transfer.clar"
 depends_on = [ ]
