--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1036,6 +1036,9 @@ path = "contracts/flash-loan-user-wstx-to-diko.clar"
 [contracts.swap-helper-bridged]
 path = "contracts/helpers/swap-helper-bridged.clar"
 
+[contracts.swap-helper-bridged-v1-1]
+path = "contracts/helpers/swap-helper-bridged-v1-1.clar"
+
 [contracts.alex-vault-v1-1]
 path = "contracts/alex-vault-v1-1.clar"
 depends_on = [
