--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1035,9 +1035,17 @@ path = "contracts/flash-loan-user-wstx-to-diko.clar"
 
 [contracts.swap-helper-bridged]
 path = "contracts/helpers/swap-helper-bridged.clar"
+depends_on = [
+  "trait-sip-010",
+  "amm-swap-pool"
+]
 
 [contracts.swap-helper-bridged-v1-1]
 path = "contracts/helpers/swap-helper-bridged-v1-1.clar"
+depends_on = [
+  "trait-sip-010",
+  "amm-swap-pool-v1-1"
+]
 
 [contracts.alex-vault-v1-1]
 path = "contracts/alex-vault-v1-1.clar"
