--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1154,8 +1154,8 @@ path = "contracts/flash-loan-user-fixed-to-amm-xusd-susdt.clar"
 [contracts.ordinals-bluewheel]
 path = "contracts/token/ordinals-bluewheel.clar"
 
-[contracts.event-claim-helper]
-path = "contracts/helpers/event-claim-helper.clar"
+[contracts.event-claim-helper-v1-01]
+path = "contracts/helpers/event-claim-helper-v1-01.clar"
 clarity_version = 2
 epoch = "2.1"
 
