--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1163,4 +1163,7 @@ path = "contracts/helpers/event-claim-helper-v1-01.clar"
 clarity_version = 2
 epoch = "2.1"
 
+[contracts.liquidity-launchpad]
+path = "contracts/pool/liquidity-launchpad.clar"
+
 
