--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1143,6 +1143,10 @@ depends_on = [ "auto-alex-v2", "token-apower", "brc20-db20" ]
 path = "contracts/token/brc20-db20.clar"
 depends_on = []
 
+[contracts.brc20-chax]
+path = "contracts/token/brc20-chax.clar"
+depends_on = []
+
 [contracts.flash-loan-user-amm-to-fixed-susdt-xusd]
 path = "contracts/flash-loan-user-amm-to-fixed-susdt-xusd.clar"
 
