--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1174,6 +1174,9 @@ epoch = "2.1"
 [contracts.launchpad-with-pool-lock]
 path = "contracts/pool/launchpad-with-pool-lock.clar"
 
+[contracts.launchpad-with-pool-lock-v1-4]
+path = "contracts/pool/launchpad-with-pool-lock-v1-4.clar"
+
 [contracts.bridge-apower-helper]
 path = "contracts/helpers/bridge-apower-helper.clar"
 clarity_version = 2
