feat: alex-launchpad-v1-5

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -581,6 +581,10 @@ depends_on = ["trait-sip-010", "trait-ido-ft", "token-apower"]
 path = "contracts/pool/alex-launchpad-v1-4.clar"
 depends_on = ["trait-sip-010", "token-apower"]
 
+[contracts.alex-launchpad-v1-5]
+path = "contracts/pool/alex-launchpad-v1-5.clar"
+depends_on = ["trait-sip-010", "token-apower"]
+
 [contracts.token-banana]
 path = "contracts/token/token-banana.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
@@ -1186,5 +1190,4 @@ epoch = "2.4"
 path = "contracts/helpers/bridge-apower-helper-v1-01.clar"
 clarity_version = 2
 epoch = "2.4"
-
 
